--- a/modules/BackOffice-WinForms/pages/Controls/Controls_NS.adoc
+++ b/modules/BackOffice-WinForms/pages/Controls/Controls_NS.adoc
@@ -1,6 +1,7 @@
 = DocsVision.BackOffice.WinForms.Controls -- пространство имён
 
-Содержит стандартные компоненты приложения _{bo}_, основанные на элементах управления DevExpress.
+Содержит стандартные компоненты приложения _{bo}_.
+// , основанные на элементах управления DevExpress.
 
 == Классы
 
