--- a/modules/BackOffice-WinForms/pages/Controls/NumeratorBox_CL.adoc
+++ b/modules/BackOffice-WinForms/pages/Controls/NumeratorBox_CL.adoc
@@ -5,12 +5,12 @@
 * *Пространство имён:* `xref:Controls/Controls_NS.adoc[DocsVision.BackOffice.WinForms.Controls]`
 * *Сборка:* `DocsVision.BackOffice.WinForms.dll`
 
-== Синтаксис
-
-[source,csharp]
-----
-public abstract class NumeratorBox : DevExpress.XtraEditors.ButtonEdit
-----
+// == Синтаксис
+//
+// [source,csharp]
+// ----
+// public abstract class NumeratorBox : DevExpress.XtraEditors.ButtonEdit
+// ----
 
 == Конструкторы
 
