--- a/modules/BackOffice-WinForms/pages/WinForms_NS.adoc
+++ b/modules/BackOffice-WinForms/pages/WinForms_NS.adoc
@@ -1,13 +1,15 @@
 = DocsVision.BackOffice.WinForms -- пространство имён
 
-Данное пространство имён предоставляет коллекцию стандартных элементов управления и набор классов для работы с разметками DevXpress.
+Данное пространство имён предоставляет коллекцию стандартных элементов управления и набор классов для работы с разметками.
+// DevXpress.
 
 == Пространства имён
 
 [cols=",",options="header"]
 |===
 |Пространство имён |Описание
-|`xref:Controls/Controls_NS.adoc[DocsVision.BackOffice.WinForms.Controls]` |Содержит стандартные компоненты приложения _{bo}_, основанные на элементах управления DevExpress.
+|`xref:Controls/Controls_NS.adoc[DocsVision.BackOffice.WinForms.Controls]` |Содержит стандартные компоненты приложения _{bo}_, основанные на элементах управления.
+// DevExpress.
 |`xref:Design/Design_NS.adoc[DocsVision.BackOffice.WinForms.Design]` |Пространство имён DocsVision.BackOffice.WinForms.Design содержит методы управления разметкой.
 |===
 
@@ -57,6 +59,6 @@
 |`CollectionSortOrder` |Задаёт порядок сортировки коллекции.
 |===
 
-== Заметки
-
-Многие методы данного класса взаимодействуют с компонентами DevExpress, что может потребовать подключение к проекту или скрипту библиотек указанного производителя.
+// == Заметки
+//
+// Многие методы данного класса взаимодействуют с компонентами DevExpress, что может потребовать подключение к проекту или скрипту библиотек указанного производителя.
