--- a/modules/Platform-CardHost/pages/CardHost/ICardHost.SelectCard_MT.adoc
+++ b/modules/Platform-CardHost/pages/CardHost/ICardHost.SelectCard_MT.adoc
@@ -23,14 +23,14 @@ caption:::
 +
 Идентификатор выбранной карточки
 
-== Примеры
-
-Для вызова окна выбора из {wincl}а, в Конструкторе разметки, для нужного вида карточки, добавьте код
-
-[source,csharp]
-----
-private void SelectCard_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
-{
- Guid selectedID = base.CardFrame.CardHost.SelectCard("Выберите карточку");
-}
-----
+// == Примеры
+//
+// Для вызова окна выбора из {wincl}а, в Конструкторе разметки, для нужного вида карточки, добавьте код
+//
+// [source,csharp]
+// ----
+// private void SelectCard_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
+// {
+//  Guid selectedID = base.CardFrame.CardHost.SelectCard("Выберите карточку");
+// }
+// ----
