--- a/modules/ROOT/partials/bo-winforms.adoc
+++ b/modules/ROOT/partials/bo-winforms.adoc
@@ -35,5 +35,5 @@
 ***** xref:BackOffice-WinForms:ScriptClassBase_CL.adoc[]
 ***** xref:BackOffice-WinForms:ICardView_IN.adoc[]
 ***** xref:BackOffice-WinForms:ICustomizableControl_IN.adoc[]
-****** xref:BackOffice-WinForms:ICustomizableControl.RibbonControl_PR.adoc[]
+// ****** xref:BackOffice-WinForms:.ICustomizableControl.RibbonControl_PR.adoc[]
 ****** xref:BackOffice-WinForms:ICustomizableControl.FindPropertyItem_MT.adoc[]
