--- a/modules/ROOT/partials/samples.adoc
+++ b/modules/ROOT/partials/samples.adoc
@@ -12,13 +12,13 @@
 *** xref:samples:use-api/create-view.adoc[]
 *** xref:samples:use-api/delayed-changes.adoc[]
 *** xref:samples:use-api/cursor-on-folder.adoc[]
-*** xref:samples:use-api/buisness-process-start.adoc[]
+// *** xref:samples:use-api/.buisness-process-start.adoc[]
 *** xref:samples:use-api/search.adoc[]
 ** xref:samples:components/index.adoc[]
 *** xref:samples:components/card-event-handler.adoc[]
 *** xref:samples:components/command-plugin.adoc[]
 *** xref:samples:components/resources-movement-card.adoc[]
-*** xref:samples:components/employee-control.adoc[]
+// *** xref:samples:components/.employee-control.adoc[]
 *** xref:samples:components/properties-page.adoc[]
 ** xref:samples:workflow-api/index.adoc[]
 *** xref:samples:workflow-api/get-user-name.adoc[]
