--- a/modules/ROOT/partials/scripts.adoc
+++ b/modules/ROOT/partials/scripts.adoc
@@ -1,5 +1,5 @@
 ** xref:scripts:develop-scripts.adoc[]
-*** xref:scripts:get-control.adoc[]
+// *** xref:scripts:.get-control.adoc[]
 *** xref:scripts:card-host.adoc[]
 **** xref:scripts:card-host-open-dir.adoc[]
 *** xref:scripts:event-subscription.adoc[]
