--- a/modules/appendix/pages/controls/docsvision/GridEx.adoc
+++ b/modules/appendix/pages/controls/docsvision/GridEx.adoc
@@ -5,7 +5,7 @@
 .Элемент управления "GridEx"
 image::ROOT:grid-ex.png[Элемент управления "GridEx"]
 
-Для получения сведений о функциональности `_GridEx_`, обратитесь к документации элемента управления https://documentation.devexpress.com/#WindowsForms/CustomDocument3461[DevExpress Data Grid], от которого наследуется `_GridEx_`.
+// Для получения сведений о функциональности `_GridEx_`, обратитесь к документации элемента управления https://documentation.devexpress.com/#WindowsForms/CustomDocument3461[DevExpress Data Grid], от которого наследуется `_GridEx_`.
 
 == Свойства
 
