--- a/modules/scripts/pages/develop-scripts.adoc
+++ b/modules/scripts/pages/develop-scripts.adoc
@@ -5,7 +5,7 @@
 В данном разделе приведена информация о специальных возможностях API {dv}, которые могут быть использованы в скриптах карточки.
 
 .В этом разделе:
-* xref:get-control.adoc[Доступ к элементам управления карточки]
+// * xref:.get-control.adoc[Доступ к элементам управления карточки]
 * xref:card-host.adoc[Взаимодействие с контейнером карточек]
 * xref:event-subscription.adoc[Подписка на события]
 * xref:get-child-cards.adoc[Доступ к подчиненным карточкам из карточки BackOffice]
