--- a/modules/solutions/pages/cards/card-component/controls.adoc
+++ b/modules/solutions/pages/cards/card-component/controls.adoc
@@ -75,9 +75,9 @@ WARNING: В текущей версии системы интеграция с {
 +
 ** `Preview` -- элемент просмотра содержимого файла. Используются средства предпросмотра, установленные в операционной системе (аналогично Microsoft Outlook).
 
-[WARNING]
-====
-Пробную версию компонентов Developer Express можно получить с сайта https://www.devexpress.com/[devexpress.com], также необходимые сборки включены в инсталляционный пакет {dv} Client. При создании конечного продукта требуется приобрести соответствующую лицензию.
-====
-
-Описание данных элементов управление приведено в разделе xref:appendix:controls/docsvision/dv-controls.adoc[Элементы управления {dv}].
+// [WARNING]
+// ====
+// Пробную версию компонентов Developer Express можно получить с сайта https://www.devexpress.com/[devexpress.com], также необходимые сборки включены в инсталляционный пакет {dv} Client. При создании конечного продукта требуется приобрести соответствующую лицензию.
+// ====
+//
+// Описание данных элементов управление приведено в разделе xref:appendix:controls/docsvision/dv-controls.adoc[Элементы управления {dv}].
