--- a/modules/solutions/pages/control.adoc
+++ b/modules/solutions/pages/control.adoc
@@ -2,10 +2,10 @@
 
 {dv} предлагает разработчикам возможность создавать собственные элементы управления и использовать их при проектировании разметки карточки в _Конструкторе разметок_.
 
-[WARNING]
-====
-Для разработки элементов управления, совместимых с _Конструктором разметок_, требуется лицензия на компоненты (WinForms) DevExpress.
-====
+// [WARNING]
+// ====
+// Для разработки элементов управления, совместимых с _Конструктором разметок_, требуется лицензия на компоненты (WinForms) DevExpress.
+// ====
 
 Элемент управления, совместимый с _Конструктором разметок_ -- это сборка, включающая в себя три обязательных компонента:
 
@@ -89,7 +89,8 @@ public partial class RealPropertyControl : XtraUserControl, IPropertyControl
 +
 При загрузке данных учитывается значение свойства `Hierarchy`, которое может быть определено в настройках элемента управления в _Конструкторе разметок_. Данное свойство получает значение из класса-контейнера (будет реализован далее).
 +
-. Реализовать графический интерфейс пользователя для элемента управления. В данном примере элемент управления представляет собой простой (`DevExpress`) `ComboBoxEdit`, который может быть заменён почти без последствий на (`WinForms`) `ComboBox`.
+. Реализовать графический интерфейс пользователя для элемента управления.
+// В данном примере элемент управления представляет собой простой (`DevExpress`) `ComboBoxEdit`, который может быть заменён почти без последствий на (`WinForms`) `ComboBox`.
 . Создаем класс, реализующий контейнер для создаваемого элемента управления, который делает данный компонент доступным для _Конструктора разметок_.
 +
 [source,csharp]
