--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.VerifySignature_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.VerifySignature_MT.adoc
@@ -56,55 +56,55 @@ fields:::
 |`http://msdn.microsoft.com/ru-ru/library/system.argumentnullexception.aspx[System.ArgumentNullException]` |Ошибка возвращается в случае, если не задан параметр `document` или `signature`.
 |===
 
-== Примеры
-
-Ниже приведён пример скрипта карточки, определяющий действительность ЭП, установленных на основным и дополнительных файлах карточки, а также действительность подписи установленной на контролируемые поля
-
-[source,csharp]
-----
-using System.Linq;
-using System.Security.Cryptography.X509Certificates;
-using System.Windows.Forms.Design;
-
-using DocsVision.BackOffice.ObjectModel;
-using DocsVision.BackOffice.ObjectModel.Services;
-using DocsVision.BackOffice.ObjectModel.Services.Entities.KindSetting;
-using DocsVision.Platform.ObjectModel;
-
-namespace BackOffice
-{
- public class CardDocumentПримерScript : CardDocumentДокументУДScript
- {
-  private void verifySignature_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
-  {
-   Document document = (base.BaseObject as Document);
-   ObjectContext objectContext = base.CardControl.ObjectContext;
-
-   IDocumentService documentService = objectContext.GetService<IDocumentService>();
-   IUserProfileCardService iUserProfileCardService = objectContext.GetService<IUserProfileCardService>();
-   IUIService uiService = objectContext.GetService<IUIService>(); <.>
-
-   X509Certificate2 certificate = iUserProfileCardService.GetCertificate(base.Session.Properties["AccountName"].Value.ToString()); <.>
-   
-   DocumentSetting documentSetting = documentService.GetKindSettings(document.SystemInfo.CardKind); <.>
-
-   BaseCardSignature lastSignature = document.MainInfo.SignatureList.Signatures.Last(); <.>
-
-   var result = documentService.VerifySignature(document, lastSignature, certificate, true, true, documentSetting.DocumentSignature.Fields); <.>
-
-   if (result.IsValid) <.>
-   {
-    uiService.ShowMessage("Документ является надежным");
-   } else {
-    uiService.ShowError("Документ не является надежным");
-   }
-  }
- }
-}
-----
-<.> Получение необходимых сервисов.
-<.> Получение сертификата сотрудника.
-<.> Получение настроек вида карточки Документ.
-<.> Получение последней установленной подписи, по ней будет определять подлинность документа.
-<.> Выполнение проверки ЭП, установленной на основные и дополнительные документы, а также на поля (для подписания) определённые в Справочнике видов карточек.
-<.> Оповещение пользователя о результате проверки ЭП.
+// == Примеры
+//
+// Ниже приведён пример скрипта карточки, определяющий действительность ЭП, установленных на основным и дополнительных файлах карточки, а также действительность подписи установленной на контролируемые поля
+//
+// [source,csharp]
+// ----
+// using System.Linq;
+// using System.Security.Cryptography.X509Certificates;
+// using System.Windows.Forms.Design;
+//
+// using DocsVision.BackOffice.ObjectModel;
+// using DocsVision.BackOffice.ObjectModel.Services;
+// using DocsVision.BackOffice.ObjectModel.Services.Entities.KindSetting;
+// using DocsVision.Platform.ObjectModel;
+//
+// namespace BackOffice
+// {
+//  public class CardDocumentПримерScript : CardDocumentДокументУДScript
+//  {
+//   private void verifySignature_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
+//   {
+//    Document document = (base.BaseObject as Document);
+//    ObjectContext objectContext = base.CardControl.ObjectContext;
+//
+//    IDocumentService documentService = objectContext.GetService<IDocumentService>();
+//    IUserProfileCardService iUserProfileCardService = objectContext.GetService<IUserProfileCardService>();
+//    IUIService uiService = objectContext.GetService<IUIService>(); <.>
+//
+//    X509Certificate2 certificate = iUserProfileCardService.GetCertificate(base.Session.Properties["AccountName"].Value.ToString()); <.>
+//
+//    DocumentSetting documentSetting = documentService.GetKindSettings(document.SystemInfo.CardKind); <.>
+//
+//    BaseCardSignature lastSignature = document.MainInfo.SignatureList.Signatures.Last(); <.>
+//
+//    var result = documentService.VerifySignature(document, lastSignature, certificate, true, true, documentSetting.DocumentSignature.Fields); <.>
+//
+//    if (result.IsValid) <.>
+//    {
+//     uiService.ShowMessage("Документ является надежным");
+//    } else {
+//     uiService.ShowError("Документ не является надежным");
+//    }
+//   }
+//  }
+// }
+// ----
+// <.> Получение необходимых сервисов.
+// <.> Получение сертификата сотрудника.
+// <.> Получение настроек вида карточки Документ.
+// <.> Получение последней установленной подписи, по ней будет определять подлинность документа.
+// <.> Выполнение проверки ЭП, установленной на основные и дополнительные документы, а также на поля (для подписания) определённые в Справочнике видов карточек.
+// <.> Оповещение пользователя о результате проверки ЭП.
