--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AddSignature_1_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITaskService.AddSignature_1_MT.adoc
@@ -60,55 +60,55 @@ documents:::
 
 Настройки (подписываемые поля; операция, при которой будет произведено подписание; и т.д.), используемые при подписании, задаются в _Справочнике видов карточек_.
 
-== Примеры
-
-Ниже приведён пример скрипта, который позволяет осуществить подписание операции в карточке _Задание_, также будет подписан основной файл
-
-[source,csharp]
-----
-using System.Linq;
-using System.Reflection;
-
-using DocsVision.BackOffice.ObjectModel;
-using DocsVision.BackOffice.ObjectModel.Services;
-using DocsVision.BackOffice.WinForms.Controls;
-using DocsVision.Platform.ObjectModel;
-
-namespace BackOffice
-{
- public class CardTaskТестScript : CardTaskНа_ознакомлениеScript
- {
-  private void SignOperation_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
-  {
-   ObjectContext objectContext = base.CardControl.ObjectContext;
-   Task task = (base.BaseObject as Task);
-
-   ITaskService taskService = objectContext.GetService<ITaskService>(); <.>
-
-   MethodInfo ensureSign = this.CardControl.GetType().GetMethod("EnsureSign", BindingFlags.NonPublic` | BindingFlags.Instance);
-   bool result = (ensureSign.Invoke(this.CardControl, null) as bool?).Value;
-   if (!result) return; <.>
-
-   bool cancel = false;
-
-   var certificate = SelectCertificateForm.SelectCertificate(ref cancel, base.CardControl.ObjectContext);
-   if (cancel) return; <.>
-
-   var taskSetting = taskService.GetKindSettings(task.SystemInfo.CardKind); <.>
-
-   var signatureSetting = taskSetting.OperationSignatures.First(t => t.SignatureName = "SignOperation"); <.>
-   
-   IEnumerable<Document> documents = task.MainInfo.ReferenceList.References.Select(t => objectContext.GetObject<Document>(t.Card)); <.>
-
-   taskService.AddSignature(task, certificate, signatureSetting.SignedOperations[0], new System.Guid(signatureSetting.Name), signatureSetting.Fields, documents); <.>
-  }
- }
-}
-----
-<.> Получение сервиса для работы с заданиями.
-<.> `EnsureSign` -- метод проверки данных карточки перед подписанием не является публичным, поэтому используем механизм отражения.
-<.> Выбор сертификата сотрудника.
-<.> Получение настроек вида карточки Задания, для получения настроек подписания.
-<.> Выбор Вида подписи (определена в Справочнике видов карточек, в секции Подпись/Подписание операций) с названием `SignOperation`.
-<.> Составление списка документов из ссылок.
-<.> Добавление подписи. Из настроек подписания, для примера, берем первую настройку.
+// == Примеры
+//
+// Ниже приведён пример скрипта, который позволяет осуществить подписание операции в карточке _Задание_, также будет подписан основной файл
+//
+// [source,csharp]
+// ----
+// using System.Linq;
+// using System.Reflection;
+//
+// using DocsVision.BackOffice.ObjectModel;
+// using DocsVision.BackOffice.ObjectModel.Services;
+// using DocsVision.BackOffice.WinForms.Controls;
+// using DocsVision.Platform.ObjectModel;
+//
+// namespace BackOffice
+// {
+//  public class CardTaskТестScript : CardTaskНа_ознакомлениеScript
+//  {
+//   private void SignOperation_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
+//   {
+//    ObjectContext objectContext = base.CardControl.ObjectContext;
+//    Task task = (base.BaseObject as Task);
+//
+//    ITaskService taskService = objectContext.GetService<ITaskService>(); <.>
+//
+//    MethodInfo ensureSign = this.CardControl.GetType().GetMethod("EnsureSign", BindingFlags.NonPublic` | BindingFlags.Instance);
+//    bool result = (ensureSign.Invoke(this.CardControl, null) as bool?).Value;
+//    if (!result) return; <.>
+//
+//    bool cancel = false;
+//
+//    var certificate = SelectCertificateForm.SelectCertificate(ref cancel, base.CardControl.ObjectContext);
+//    if (cancel) return; <.>
+//
+//    var taskSetting = taskService.GetKindSettings(task.SystemInfo.CardKind); <.>
+//
+//    var signatureSetting = taskSetting.OperationSignatures.First(t => t.SignatureName = "SignOperation"); <.>
+//
+//    IEnumerable<Document> documents = task.MainInfo.ReferenceList.References.Select(t => objectContext.GetObject<Document>(t.Card)); <.>
+//
+//    taskService.AddSignature(task, certificate, signatureSetting.SignedOperations[0], new System.Guid(signatureSetting.Name), signatureSetting.Fields, documents); <.>
+//   }
+//  }
+// }
+// ----
+// <.> Получение сервиса для работы с заданиями.
+// <.> `EnsureSign` -- метод проверки данных карточки перед подписанием не является публичным, поэтому используем механизм отражения.
+// <.> Выбор сертификата сотрудника.
+// <.> Получение настроек вида карточки Задания, для получения настроек подписания.
+// <.> Выбор Вида подписи (определена в Справочнике видов карточек, в секции Подпись/Подписание операций) с названием `SignOperation`.
+// <.> Составление списка документов из ссылок.
+// <.> Добавление подписи. Из настроек подписания, для примера, берем первую настройку.
