--- a/modules/BackOffice-WinForms/pages/CardFrameForm_CL.adoc
+++ b/modules/BackOffice-WinForms/pages/CardFrameForm_CL.adoc
@@ -20,6 +20,6 @@ public partial class CardFrameForm : DevExpress.XtraEditors.XtraForm, ICardFrame
 |`CardFrameForm()` |Инициализирует экземпляр класса CardFrameForm.
 |===
 
-== Заметки
-
-Основную функциональность предоставляет базовый класс `https://documentation.devexpress.com/#windowsforms/clsDevExpressXtraEditorsXtraFormtopic[DevExpress.XtraEditors.XtraForm]`.
+// == Заметки
+//
+// Основную функциональность предоставляет базовый класс `https://documentation.devexpress.com/#windowsforms/clsDevExpressXtraEditorsXtraFormtopic[DevExpress.XtraEditors.XtraForm]`.
