--- a/modules/appendix/pages/controls/docsvision/dv-controls.adoc
+++ b/modules/appendix/pages/controls/docsvision/dv-controls.adoc
@@ -1,10 +1,11 @@
 = Элементы управления Docsvision
 
-[WARNING]
-====
-Чтобы использовать данные компоненты, необходимо иметь лицензию разработчика для работы с компонентами DevExpress.
-====
+// [WARNING]
+// ====
+// Чтобы использовать данные компоненты, необходимо иметь лицензию разработчика для работы с компонентами DevExpress.
+// ====
 
-Данный раздел содержит описание элементов управления, которые используются в Backoffice (сборка `DocsVision.BackOffice.WinForms.dll`), но также могут быть использованы в собственном решении. Данные компоненты могут быть добавлены непосредственно на _Панель элементов_ Visual Studio при подключении указанной сборки и наличии установленного комплекта компонентов DevExpress.
+Данный раздел содержит описание элементов управления, которые используются в Backoffice (сборка `DocsVision.BackOffice.WinForms.dll`), но также могут быть использованы в собственном решении. Данные компоненты могут быть добавлены непосредственно на _Панель элементов_ Visual Studio при подключении указанной сборки.
+// и наличии установленного комплекта компонентов DevExpress.
 
 Для использования данных элементов управления, компонент карточки должен быть унаследован от базового типа `xref:BackOffice-WinForms:BaseCardControl_CL.adoc[BaseCardControl]`.
