--- a/modules/samples/pages/components/properties-page.adoc
+++ b/modules/samples/pages/components/properties-page.adoc
@@ -25,7 +25,9 @@ public partial class PropertyPageControl : NavPropertyPageControl
 +
 [NOTE]
 ====
-Если для реализации пользовательского интерфейса используются компоненты WinForms (или DevExpress), а не WPF, то нужно наследовать свой класс от типа `DocsVision.Platform.WinForms`, реализованного в сборке `DocsVision.Platform.WinForms.dll`. +
+Если для реализации пользовательского интерфейса используются компоненты WinForms,
+// (или DevExpress),
+а не WPF, то нужно наследовать свой класс от типа `DocsVision.Platform.WinForms`, реализованного в сборке `DocsVision.Platform.WinForms.dll`. +
 Название типов в WPF и WinForms-версиях сборок совпадают.
 ====
 +
