--- a/modules/scripts/pages/event-subscription.adoc
+++ b/modules/scripts/pages/event-subscription.adoc
@@ -1,6 +1,9 @@
 = Подписка на события
 
-Элементы управления (на базе компонентов DevExpress), используемые при создании пользовательского интерфейса карточек библиотеки _{bo}_, разрешают подписываться на события, наследуемые от оригинальных компонентов. Описание событий приведено в документации к соответствующим элементам управления DevExpress. Помимо этого, элементы управления {dv} могут предоставлять дополнительные события, описание которых приведено в этом разделе.
+Элементы управления,
+// (на базе компонентов DevExpress),
+используемые при создании пользовательского интерфейса карточек библиотеки _{bo}_, разрешают подписываться на события, наследуемые от оригинальных компонентов.
+// Описание событий приведено в документации к соответствующим элементам управления DevExpress. Помимо этого, элементы управления {dv} могут предоставлять дополнительные события, описание которых приведено в этом разделе.
 
 [WARNING]
 ====
