--- a/modules/scripts/pages/get-child-cards.adoc
+++ b/modules/scripts/pages/get-child-cards.adoc
@@ -9,38 +9,38 @@
 * `ActivateChildCard(Guid)` -- активирует подчиненную карточку по её идентификатору.
 * `GetActivatedChildCards` -- возвращает массив компонентов активированных карточек. Активированной считается карточка, компонент которой был загружен в память, при этом сама карточка может быть закрыта.
 
-Ниже приведён пример, в котором в подчиненной карточке (должна быть активирована) устанавливается значение поле типа "Дата/Время":
-
-[source,csharp]
-----
-private void GetActiveCardId_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
-{
- ICardView cardView = (this.CardControl as ICardView); <.>
-
- BaseCardControl cardControl = cardView.GetActivatedChildCards()[0]; <.>
-        
- ICustomizableControl customizable = cardControl;
- ILayoutPropertyItem registrationDate = customizable.FindPropertyItem<ILayoutPropertyItem>("CreationDate");
- registrationDate.ControlValue = DateTime.Now.AddDays(-1); <.>
- registrationDate.Commit();
-}
-----
-<.> Получаем интерфейс `ICardView` компонента карточки "Задание".
-<.> Получаем компонент первой подчиненной карточки (должна быть активирована).
-<.> Получаем элемент управления и изменяем дату.
-
-.Следующий код активирует первую (по списку) дочернюю карточку задания:
-[source,csharp]
-----
-private void ActivateCard_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
-{
- ICardView cardView = (this.CardControl as ICardView); <.>
- 
- Guid cardId = (this.CardControl as ICardView).GetChildCardIds()[0]; <.>
-
- cardView.ActivateChildCard(cardId); <.>
-}
-----
-<.> Получаем интерфейс ICardView компонента карточки Задание.
-<.> Получаем идентификатор первой дочерней карточки.
-<.> Активируем карточку.
+// Ниже приведён пример, в котором в подчиненной карточке (должна быть активирована) устанавливается значение поле типа "Дата/Время":
+//
+// [source,csharp]
+// ----
+// private void GetActiveCardId_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
+// {
+//  ICardView cardView = (this.CardControl as ICardView); <.>
+//
+//  BaseCardControl cardControl = cardView.GetActivatedChildCards()[0]; <.>
+//
+//  ICustomizableControl customizable = cardControl;
+//  ILayoutPropertyItem registrationDate = customizable.FindPropertyItem<ILayoutPropertyItem>("CreationDate");
+//  registrationDate.ControlValue = DateTime.Now.AddDays(-1); <.>
+//  registrationDate.Commit();
+// }
+// ----
+// <.> Получаем интерфейс `ICardView` компонента карточки "Задание".
+// <.> Получаем компонент первой подчиненной карточки (должна быть активирована).
+// <.> Получаем элемент управления и изменяем дату.
+//
+// .Следующий код активирует первую (по списку) дочернюю карточку задания:
+// [source,csharp]
+// ----
+// private void ActivateCard_ItemClick(System.Object sender, DevExpress.XtraBars.ItemClickEventArgs e)
+// {
+//  ICardView cardView = (this.CardControl as ICardView); <.>
+//
+//  Guid cardId = (this.CardControl as ICardView).GetChildCardIds()[0]; <.>
+//
+//  cardView.ActivateChildCard(cardId); <.>
+// }
+// ----
+// <.> Получаем интерфейс ICardView компонента карточки Задание.
+// <.> Получаем идентификатор первой дочерней карточки.
+// <.> Активируем карточку.
