--- a/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
+++ b/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
@@ -72,10 +72,10 @@ namespace DocsVision.Test
 
 Чтобы карточка поддерживала механизм настройки разметок через справочник "Конструктор разметок", а также обладала дополнительной встроенной функциональностью (работа с бизнес-процессами, переходы по автомату состояний) следует унаследовать класс не от `CardControl`, а от `xref:BackOffice-WinForms:BaseCardControl_CL.adoc[BaseCardControl]`, входящей в сборку `DocsVision.BackOffice.WinForms.dll`. Данная сборка входит в клиентский инсталляционный пакет {dv} и является одним из компонентов библиотеки карточек "{bo}".
 
-[WARNING]
-====
-Для разработки на основе `BaseCardControl` требуется использование компонентов https://www.devexpress.com/[`Developer Express`]. Необходимые сборки входят в состав клиентской инсталляции {dv}, но их можно использовать только в качестве пробной версии. Для коммерческой разработки требуется покупка соответствующей лицензии.
-====
+// [WARNING]
+// ====
+// Для разработки на основе `BaseCardControl` требуется использование компонентов https://www.devexpress.com/[`Developer Express`]. Необходимые сборки входят в состав клиентской инсталляции {dv}, но их можно использовать только в качестве пробной версии. Для коммерческой разработки требуется покупка соответствующей лицензии.
+// ====
 
 `BaseCardControl` в свою очередь унаследован от `CardControl`, поэтому все вышеуказанные свойства также будут доступны. Кроме того, в такой карточке автоматически можно использовать элементы объектной модели:
 
